# c-cash

./: CMakeLists.txt  README.md  ToDo  cc  main.cpp  makefile  test.cash  test.ckasz  test2.cash  test3.cash
archive/errors/: ccashError.hpp
archive/interpreter/: Functions.cpp  Interpreter.cpp
archive/libraries/: AlgorithmsLibrary.cpp  AlgorithmsLibrary.hpp  FileLibrary.cpp  LibraryRegistry.hpp  MathLibrary.hpp  RandomLibrary.hpp  RegexLibrary.cpp
archive/other/: ParseSaver.hpp
archive/variables/: Boolean.hpp  Char.cpp  Char.hpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  Long.hpp  Object.cpp  SpecialObject.cpp  SpecialObject.hpp  String.hpp
docs/: README.md  TODO.md  _sidebar.md  docs.html  examples.md  index.html  syntax.md
docs/Bytecode/: README.md
docs/Bytecode/v0.1.0/: README.md  compiling.md  examples.md  instructions.md
docs/Libraries/: README.md  algorithms.md  builtin.md  convert.md  file.md  math.md  random.md  string.md  time.md
interpreter/: Functions.cpp  Functions.hpp  Interpreter.cpp  Interpreter.hpp  Namespace.cpp  Namespace.hpp  Types.hpp
interpreter/varibles/: variblesFunc.cpp  variblesFunc.hpp
libraries/: Library.cpp  Library.hpp  LibraryRegistry.cpp  MathLibrary.cpp  MathLibrary.hpp
other/: ParseSaver.cpp  ParseSaver.hpp
parser/: FunctionDefinition.cpp  FunctionDefinition.hpp  Parser.cpp  Parser.hpp  Statement.cpp  Statement.hpp  Tokenaizer.cpp  Tokenizer.hpp  Type.cpp  Type.hpp
src/analysis/: Analysis.cpp  Analysis.hpp
src/compiler/: Compiler.cpp  Compiler.hpp  bytecodedecoder.py
src/errors/: interpreterError.hpp
src/interpreter/: Functions.cpp  Functions.hpp  Interpreter.cpp  Interpreter.hpp  Namespace.hpp
src/libraries/: AlgorithmsLibrary.cpp  ConvertLibrary.cpp  ConvertLibrary.hpp  FileLibrary.cpp  FileLibrary.hpp  Library.hpp  LibraryRegistry.hpp  MathLibrary.cpp  MathLibrary.hpp  RandomLibrary.cpp  RegexLibrary.hpp  StringLibrary.cpp  StringLibrary.hpp  TimeLibrary.cpp  TimeLibrary.hpp
src/linker/: Linker.cpp  Linker.hpp
src/optimizer/: Optimizer.cpp  Optimizer.hpp
src/other/: ParseSaver.cpp  ParseSaver.hpp
src/parser/: ClassDefinition.cpp  ClassDefinition.hpp  ExpectFunctions.cpp  ExpectFunctions.hpp  FunctionDefinition.cpp  FunctionDefinition.hpp  Parser.cpp  Parser.hpp  Statement.hpp  Tokenaizer.cpp  Tokenizer.hpp  Type.hpp
src/transpiler/: Transpiler.cpp  Transpiler.hpp
src/variables/: Array.cpp  Array.hpp  Boolean.cpp  Boolean.hpp  Char.cpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  Long.cpp  Long.hpp  Object.cpp  Object.hpp  SpecialObject.cpp  SpecialObject.hpp  String.cpp  String.hpp
src/vm/: VMClass.cpp  VMClass.hpp  VirtualMachine.cpp  VirtualMachine.hpp
tests/: ifTest.ccash  ifTest.cpp  loopTest.cash  loopTest.ccash  loopTest.cpp  mathTest.cash  mathTest.ccash  mathTest.cpp  returnTest.cash  returnTest.cpp  tableTest.cash  tableTest.cpp  variableTest.cash  variableTest.cpp  ~ifTest.txt  ~loopTest.txt  ~mathTest.txt  ~retrunTest.txt  ~tableTest.txt  ~variableTest.txt
transpiler/: Transpiler.cpp  Transpiler.hpp
variables/: Boolean.cpp  Boolean.hpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  Object.cpp  Object.hpp  SpecialObject.cpp  SpecialObject.hpp  String.cpp  String.hpp
